--- a/week2/mon-afternoon-project/index.html
+++ b/week2/mon-afternoon-project/index.html
@@ -7,11 +7,12 @@
     <title>Discover the world's best design</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="owl.PNG">
+    <script src="practice.js"></script>
 </head>
 <body>
     <div class="white-background"></div>
     <nav>
-        <div class='logo'><img src="designbetterpic.PNG" title="first pic" alt="first pic"></a></div>
+        <div class='logo'><img src="owlAlpha.png" title="first pic" alt="first pic"></a></div>
         <ul>
             <li>DESIGN MATURITY MODEL</li>
             <li>BOOKS</li>
@@ -23,11 +24,25 @@
             <div class="in">in</div>
     </nav>
     <image class='first-pic'></image>
+    <image class='second-pic'></image>
+    <image class='third-pic'></image>
     <div class="four-items">
         <div class="four-button"></div>
         <div class="four-button"></div>
         <div class="four-button"></div>
         <div class="four-button"></div>
     </div>
+    <footer>
+        <ul>
+            <li>INVISIONAPP.COM</li>
+            <li>TERMS OF SERVICE</li>
+            <li>PRIVACY</li>
+        </ul>
+        <div class ='bot-thing'>
+            <h1 class = "invision">© INVISION 2019 </h1>
+            <div class='logo2'><img src="owlAlpha.png" title="first pic" alt="first pic"></a></div>
+        </div>
+    </footer>
 </body>
+
 </html>
